# MKIDGen3

./: .gitignore  README.md  pyproject.toml  setup.cfg
mkidgen3/: __init__.py  funcs.py  power_sweep_helpers.py  registers.py  rfsocmemory.py  system_parameters.py  util.py
mkidgen3/drivers/: rfdcclock.py
mkidgen3/equipment_drivers/: ifboard.py
mkidgen3/mkid_setup/: interactive_setup.py  loop_locator.py  sweeps.py
mkidgen3/server/: captures.py  feedline_config.py  feedline_server.py  fpga_objects.py  photontable.py  waveform.py
scripts/arraysetup/: power_sweep_client.py
