[metadata]
name = mkidgen3
description = Drivers and Client/Server control library for Mazin Labs 3rd generation MKID readout
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MazinLab/MKIDGen3
author = Mazin Lab Contributors
maintainer = Mazin Lab Contributors
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE

[options]
packages = find:
install_requires =
    numpy>=1.21
    scipy>=1.8.0
    pyserial>=3.5
    pyyaml>=5.4.1
python_requires = >=3.6
include_package_data = True
package_dir =
zip_safe = False

[options.packages.find]
where = .

[options.extras_require]
board =
    pynq>=3.0.1
    fpbinary==1.5.8
    xrfdc==2.0
    xrfclk==2.0
anritsu =
    requests>=2.25.0
sccommon =
    pyzmq>=23.2.0
    blosc2>=2.2.0
    tqdm>=4.64.0
server =
    psutil>=5.9.0
    mkidgen3[board,sccommon]
client =
    h5py>=3.10.0
    hdf5plugin>=4.4.0
    npy-append-array==0.9.16
    mkidgen3[sccommon]
plotting =
    matplotlib>=3.5.1
